--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <div class="hero__scroll-container">
                     <div class="hero__transform-target">
                         <p class="hero__intro">
-                            Pitch helps teams build better presentations:<br />collaboratively, effectively, and beautifully.
+                            We broadcast your Events:<br />collaboratively, effectively, and beautifully.
                         </p>
                         <div class="hero__headline">
-                            <h1 class="hero__headline-text">We connect you to remote</h1>
+                            <h1 class="hero__headline-text">Streaming your Happiness</h1>
                             <img src="images/5f8ee487af0c7ceb5324d7cb_hero-hands.png" loading="eager" alt="" class="hero__hand" />
                             <img src="images/background.jpg" loading="eager" data-w-id="714457fd-a11f-def2-3fa8-cbefa1250096" alt="" class="hero__ui" />
                         </div>
@@ -85,7 +85,7 @@
     </div>
     <div class="intro">
         <div class="intro__logos">
-            <h5 class="intro__logos-heading" style="margin-bottom:50px">Used by teams like</h5>
+            <h5 class="intro__logos-heading" style="margin-bottom:50px">Trusted by leading studios</h5>
             <div class="intro__logos-wrapper">
                 <img src="images/shakir.png" alt="" class="intro__logo intro__logo--rmargin" />
                 <img src="images/jagan.png" alt="" class="intro__logo intro__logo--rmargin" />
@@ -96,9 +96,9 @@
         </div>
         <div class="intro__workflow" style="padding-top: 50px;">
             <div data-w-id="27859ee4-d847-6c58-feed-bc99fd89256e" class="intro__workflow-text">
-                <h2 class="intro__workflow-heading">Workflow that just works.</h2>
+                <h2 class="intro__workflow-heading">Live</h2>
                 <p class="intro__workflow-paragraph">
-                    Collaboration should be simple, straightforward, and effective. With Pitch, it is. Discuss current activities, manage tasks, and stay productive as a team. Create on any device, online or offline, and get great work done faster.
+                    Grow your audience everywhere. No more missing guests due to long distance.
                 </p>
             </div>
             <!--<div data-w-id="9c175be1-6844-1e7f-3e05-84e6419233b0" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5f8ed35013fa85618cfb8d85/5fad4db0766a724d01aa05ca_collaboration_mrrqs1.mp4.lottie%20(1).json" data-loop="0" data-direction="1"
@@ -111,9 +111,9 @@
     </div>
     <div class="decks">
         <div data-w-id="22320839-ee28-8005-eec9-1d09377c883c" class="decks__text">
-            <h2 class="decks__text-heading">From draft to deck in no time</h2>
+            <h2 class="decks__text-heading">Sites as beautiful as you</h2>
             <p class="decks__text-paragraph">
-                Pick from our library of custom-crafted templates or create your own. Manage your company assets directly within Pitch to ensure presentations look great and stay on brand.
+                 Vhall ensures that the website looks great.
             </p>
         </div>
         <div data-w-id="627f0563-f0d5-b558-fb7a-1d657a7d85cf" class="decks__wrapper">
@@ -171,13 +171,13 @@
                 data-renderer="canvas" data-default-duration="0.5517241379310345" data-duration="0.5517241379310345" class="formatting__lottie"></div>
             <div class="formatting__text">
                 <h2 data-w-id="3a91c95d-0a43-9339-c021-4d0f49453d72" class="formatting__heading">
-                    Formatting that’s effortless
+                    Easy
                 </h2>
                 <p data-w-id="d2ae5211-a84e-1d29-028c-f94ab4fc49e8" class="formatting__paragraph formatting__paragraph--space">
-                    Work on your story — we’ll take care of the rest. Pitch’s smart formatting options turn raw ideas into stunning slides.<br />
+                    Redirect your online guests to us  — we’ll take care of the rest. Vhall’s smart Website makes the guests to feel the same vibe.<br />
                 </p>
                 <p data-w-id="c79894c1-3b77-3bbb-107d-02d42e5bc5fe" class="formatting__paragraph">
-                    Whether you’re a casual builder or you work on slides every day, Pitch gives your team design superpowers.
+                    
                     <br />
                 </p>
             </div>
@@ -188,9 +188,9 @@
     <div class="integrations">
         <div class="integrations__wrapper">
             <div data-w-id="80701129-0266-ce0a-9b7d-fecbbf6dd68e" class="integrations__text">
-                <h2 class="integrations__text-heading">Connected to what matters</h2>
+                <h2 class="integrations__text-heading">Craft your Site</h2>
                 <p class="integrations__text-paragraph">
-                    Knowledge isn’t static — why should your presentations be? We integrate with the tools you rely on every day to keep information and conversations up-to-date, turning presentations into living documents.
+                    Choose from designer made templates for your event or change , customize or add anything to your site. Look amazing on every screen with a mobile-friendly version of your website.
                 </p>
             </div>
             <div data-w-id="a43a7fe9-e44f-8893-6706-ad2800db832e" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5f8ed35013fa85618cfb8d85/5fad64c60ccf8536da06944b_integrations.json" data-loop="0" data-direction="1" data-autoplay="0" data-is-ix2-target="1"
@@ -201,9 +201,9 @@
 
     <div class="sharing">
         <div data-w-id="56bd0bd2-f2bb-6dca-aa4d-386a1e522b6b" class="sharing__text">
-            <h2 class="sharing__text-heading">Ideas that can go anywhere</h2>
+            <h2 class="sharing__text-heading">Invites that can go anywhere</h2>
             <p class="sharing__text-paragraph">
-                There are no limits to how — and with whom — you can share. Present to a client or at a conference. Keep presentations private for your team, or publish them for the whole world to see.
+                There are no limits to how — and with whom — you can share.
             </p>
         </div>
         <div class="sharing__wrapper">
@@ -222,7 +222,7 @@
 
 
     <div class="testimonials">
-        <h2 class="testimonials__heading">What others are saying</h2>
+       <!-- <h2 class="testimonials__heading">What others are saying</h2>
         <div class="testimonials__wrapper">
             <div class="testimonials__card">
                 <div class="testimonials__card-content">
@@ -262,17 +262,17 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="cta" id="contact-form">
         <div class="cta__container">
             <h2 class="cta__heading">Ready to see what we’re building?</h2>
             <div class="cta__wrapper w-form">
-                <form id="email-form" name="email-form" data-name="Email Form" class="cta-div">
+                <form id="email-form" name="submit-to-google-sheet" data-name="Email Form" class="cta-div">
                     <div class="cta__input-wrapper">
-                        <input type="name" class="cta__input w-input" maxlength="256" name="Hero-CTA-Email-2" data-name="Hero CTA Email 2" placeholder="Your name" id="Hero-CTA-Email-2" required="" style="margin-right: 30px;" />
-                        <input type="email" class="cta__input w-input" maxlength="256" name="Hero-CTA-Email-2" data-name="Hero CTA Email 2" placeholder="Your email" id="Hero-CTA-Email-2" required="" style="margin-right: 30px;" />
-                        <input type="message" class="cta__input w-input" maxlength="256" name="Hero-CTA-Email-2" data-name="Hero CTA Email 2" placeholder="Your Message" id="Hero-CTA-Email-2" required="" style="margin-right: 30px;" />
+                        <input type="name" class="cta__input w-input" maxlength="256" name="name"  placeholder="Your name" id="Hero-CTA-Email-2" required="" style="margin-right: 30px;" />
+                        <input type="email" class="cta__input w-input" maxlength="256" name="email"  placeholder="Your email" id="Hero-CTA-Email-2" required="" style="margin-right: 30px;" />
+                        <input type="message" class="cta__input w-input" maxlength="256" name="message"  placeholder="Your Message" id="Hero-CTA-Email-2" required="" style="margin-right: 30px;" />
                         <input type="submit" value="Send" data-wait="Please wait..." class="cta__button w-button" />
                     </div>
 
@@ -300,7 +300,7 @@
                 <div class="footer__copyright">
                     Whatsapp : <a href="https://api.whatsapp.com/send?phone=+919791717139&amp;text=I%20need%20more%20information%20about%20live%20streaming " target="_blank ">9791717139</a>
                 </div>
-                <div class="footer__copyright">© Copyright 2020 Vhall.live </div>
+                <div class="footer__copyright">Have a nice day ❤ </div>
             </div>
 
             <div id="w-node-733cbb12f432-bb12f40b" class="footer__sm">
@@ -340,10 +340,27 @@
         </div>
     </div>
 
-    <script src="js/jquery-3.5.1.min.dc5e7f18c8223e.js?site=5f8ed35013fa85618cfb8d85" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyTxycpOm7zl3r_kHfd2pihtZ0PQ1T0UilWYwOBApG7udLlpzZgANussKFSP6cUJmvN/exec'
+        const form = document.forms['submit-to-google-sheet']
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => console.log('Success!', response))
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
+
+
+
+    <script src="js/jquery-3.5.1.min.dc5e7f18c8223e.js?site=5f8ed35013fa85618cfb8d85" type="text/javascript" crossorigin="anonymous"></script>
     <script src="js/webflow.e3dd0df31.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <!--[if lte IE 9
       ]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     ><![endif]-->
 </body>
 
