--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="intro__workflow" style="padding-top: 50px;">
             <div data-w-id="27859ee4-d847-6c58-feed-bc99fd89256e" class="intro__workflow-text">
-                <h2 class="intro__workflow-heading">Live</h2>
+                <h2 class="intro__workflow-heading">Live 🔥</h2>
                 <p class="intro__workflow-paragraph">
                     Grow your audience everywhere. No more missing guests due to long distance.
                 </p>
