--- a/suriyawedsjyothika/index.html
+++ b/suriyawedsjyothika/index.html
@@ -84,6 +84,7 @@
         </div>
     </div>
 
+    
     <div id="live-section" class="live-section">
         <div class="live-container w-container">
 
@@ -116,6 +117,14 @@
         </div>
     </div>
 
+    <div id="chat-section" class="chat-section">
+        <h1 data-w-id="9941ca99-f532-da64-1e4d-6d5289403cc6" style="padding-top: 2%; -webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
+        class="live-header">
+        LIVE CHAT
+    </h1>
+        <iframe  height="100%" width="100%" src='https://go.arena.im/embed/chat/vhall-80629/r34n' style='padding: 5%; border: 0; border-radius: 4px;' scrolling="no" ></iframe>
+         
+    </div>
 
     <div class="gallery-section">
         <div class="gallery-div">
