--- a/suriyawedsjyothika/index.html
+++ b/suriyawedsjyothika/index.html
@@ -119,9 +119,8 @@
 
     <div id="chat-section" class="chat-section">
 
-        
-        <iframe height="100%" width="100%" style="padding: 5%;" src="https://go.arena.im/embed/chat/vhall-80629/r34n" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-        
+        <div style="padding: 5%;" class="arena-chat" data-publisher="vhall-80629" data-chatroom="r34n" data-position="in-page"></div><script async src="https://go.arena.im/public/js/arenachatlib.js?p=vhall-80629&e=r34n"></script>
+
     </div>
 
     <div class="gallery-section">
