--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </nav>
             <div id="w-node-2a2e29fe89df-29fe89b6" class="nav__buttons">
                 <a href="#contact-form" class="button button--white-whitebg button--space button--nomobile w-button">Contact Us 📧</a>
-                <a href="http://suriyawedsjyothika.vhall.live" target="_blank" class="button button--blue w-button">Demo 🎉</a>
+                <a href="https://suriya-weds-jyothika.vhall.live/" target="_blank" class="button button--blue w-button">Demo 🎉</a>
             </div>
             <div class="nav__mobilebutton w-nav-button">
                 <div class="nav__mobileicon w-icon-nav-menu"></div>
